# stemma

./: .gitignore  README.md  pyproject.toml
schemas/: inventory-v0.0.1.schema.json  snapshot-v0.0.1.schema.json
src/stemma/: __init__.py  catalog.py  cli.py  errors.py  inventory.py  models.py  path_normalization.py  reconciliation.py  schema.py  serialization.py  snapshot.py
src/stemma/collectors/: __init__.py  errors.py  snapshot.py  syncthing_api.py
src/stemma/web/: __init__.py  app.py  filters.py  logging.py  middleware.py  server.py  view_models.py
src/stemma/web/static/: catalog.css
src/stemma/web/templates/: base.html  catalog.html  error.html
tests/: conftest.py  test_catalog_security.py  test_catalog_serialization.py  test_catalog_service.py  test_collector_security.py  test_inventory.py  test_models.py  test_path_normalization.py  test_reconciliation.py  test_security_boundary.py  test_snapshot.py  test_snapshot_collector.py  test_snapshot_writer.py  test_syncthing_client.py  test_web_access_logging.py  test_web_filters.py  test_web_routes.py  test_web_security.py  test_web_server_config.py  test_web_server_integration.py  test_web_startup.py
tests/fixtures/reconciliation/: inventory-malformed.yaml  inventory-valid.yaml  snapshot-device-a.json  snapshot-device-b.json  snapshot-malformed.json
tests/fixtures/syncthing/: folders-deprecated-modes.json  folders-malformed.json  folders-ok.json  folders-windows-path.json  status-ok.json
