[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "stemma"
version = "0.0.1"
description = "Validated desired and actual models for a Syncthing document catalog"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0.2,<7",
]

[project.scripts]
docs-sync-exporter = "stemma.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.400,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
  "types-jsonschema>=4.23,<5",
  "types-PyYAML>=6.0.12,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stemma"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/inventory-v0.0.1.schema.json" = "stemma/_schemas/inventory-v0.0.1.schema.json"
"schemas/snapshot-v0.0.1.schema.json" = "stemma/_schemas/snapshot-v0.0.1.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "/.python-version",
  "/README.md",
  "/pyproject.toml",
  "/schemas",
  "/src",
  "/tests",
  "/uv.lock",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
